# MemeAgent

./: README.md  test_llm_api.py
Agent/: .env  .env.example  README.md  batch_agent_evaluator.py  batch_agent_evaluator_main_as_controller.py  evaluate_harmful_memes.py  keep_local_models_loaded.py  local_inference_server.py  main.py  prepare_fhm_trajectory_dataset.py  pyproject.toml  requirements-local.txt  requirements.txt  retrieve.py  retrieve_anspire_demo.py  run_batch_ablation.sh  run_fhm_trajectory_sampling.sh  test_batch_agent_evaluator.py  test_batch_agent_evaluator_main_as_controller.py  test_cache.py  test_context_fetcher.py  test_evaluate_harmful_memes.py  test_heads.py  test_iterative_retrieval.py  test_llm_api_keys.py  test_llm_local.py  test_llm_trace.py  test_local_inference_server.py  test_memory.py  test_retrieval_decision.py  test_retrieve_cli.py  test_search_connectivity.py  test_search_retrieval.py  test_smoke.py  test_trajectory.py
Agent/.memeagent_cache/: eval_dryrun_summary.json  search.sqlite3  trajectory.sqlite3
Agent/.memeagent_memory/: memory.sqlite3
Agent/.memeagent_traces/: llm_trace_20260630_090523.json  llm_trace_20260630_090600.json  llm_trace_20260630_091741.json  llm_trace_20260630_094515.json  llm_trace_20260630_103020.json  llm_trace_20260630_152310.json  llm_trace_20260630_191244.json  llm_trace_20260630_194733.json  llm_trace_20260630_200911.json  llm_trace_20260711_204151.json  llm_trace_20260711_204815.json  llm_trace_20260711_210725.json  llm_trace_20260711_212614.json  llm_trace_20260712_155553.json  llm_trace_20260714_112822.json  llm_trace_20260714_133314.json  (+2 more)
(+142 files in other folders)
